# CppSafeIO

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cpp-safe-IO.h  cpp-safe-io.cpp  cpp-safer-input.cpp  cpp-safer-input.h
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cmake-for-libraries.yml
src/: CMakeLists.txt  cpp-safe-io.cpp  cpp-safe-io.h  cppsafeio.cpp  cppsafeio.h
tests/: CMakeLists.txt  README.md  automated-tests.cpp  tests.cpp
